Create profile section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         </form>
     </section>
 
+    <section class="greeting">
+        <div class="current-profile">
+            <img src="./img/jesse-martin.png" alt="Jesse Martin" class="jesse-martin-avatar">
+            <div class="profile-info">
+                <span>Jesse Martin</span>
+                <div class="handle">@jessemartin</div>   
+            </div>
+        </div>
+    </section>
+
     <section class="action"></section>
     <main></main>
     <aside class="announcement"></aside>
