Add buttons (new, upload, share)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>Dashboard</header>
     <nav></nav>
-
+<div class="intro">
     <section class="search">
         <form id="search" role="search">
             <div class="search-icon-wrapper">
@@ -31,7 +31,14 @@
         </div>
     </section>
 
-    <section class="action"></section>
+    <section class="action">
+        <button type="button">New</button>
+        <button type="button">Upload</button>
+        <button type="button">Share</button>
+    </section>    
+</div>
+
+
     <main></main>
     <aside class="announcement"></aside>
     <aside class="trending"></aside>
