Add announcement content

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <main>
         <section class="your-projects">
+            <h3>Your Projects</h3>
             <div class="cards"></div>
             <div class="cards"></div>
             <div class="cards"></div>
@@ -48,9 +49,30 @@
             <div class="cards"></div>
             <div class="cards"></div>
         </section>
+
+        <aside class="announcement">
+            <h3>Announcement</h3>
+            <div class="announcement-items">
+                <div class="item1">
+                    <h4>Site Maintenance</h4>
+                    <p>We're doing site maintenance yada yada, blah blah blah, and you should go fuck yourself. Thank you very much.</p>
+                </div>
+                <div class="item2">
+                    <h4>Community Share Day</h4>
+                    <p>In this coming Community Share Day, why don't you take a break from being an evil mofo and share your wife with everybody?</p>
+                </div>
+                <div class="item3">
+                    <h4>Updated Privacy Policy</h4>
+                    <p>We have just updated our Privacy Policy, but who the fuck cares? Nobody reads that thing. Anyway, we're taking all your data. Nothing you do is private. Privacy is a myth. Go fuck yourself.</p>
+                </div>
+            </div>
+        </aside>
+
+        <aside class="trending">
+            
+        </aside>
     </main>
 
-    <aside class="announcement"></aside>
-    <aside class="trending"></aside>
+    
 </body>
 </html>
