Add content to Trending section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,37 @@
         </aside>
 
         <aside class="trending">
-            
+            <h3>Trending</h3>
+            <div class="trending-items">
+                <div class="item1">
+                    <img src="./img/alexis-hunter.png" alt="Alexis Hunter">
+                    <div class="trending-info">
+                        <p>@alexishunter</p>
+                        <p>Manhattan Project</p>
+                    </div>
+                </div>
+                <div class="item2">
+                    <img src="./img/jesse-martin.png" alt="Jesse Martin">
+                    <div class="trending-info">
+                        <p>@jessemartin</p>
+                        <p>The Blair Witch Project</p>
+                    </div>
+                </div>
+                <div class="item3">
+                    <img src="./img/krystal-davenport.png" alt="Krystal Davenport">
+                    <div class="trending-info">
+                        <p>@krystaldavenport</p>
+                        <p>SCP Foundation</p>
+                    </div>
+                </div>
+                <div class="item4">
+                    <img src="./img/vivan-hayes.png" alt="Vivial Hayes">
+                    <div class="trending-info">
+                        <p>@vivianhayes</p>
+                        <p>Project X</p>
+                    </div>
+                </div>
+            </div>
         </aside>
     </main>
 
