Add navigation menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 </head>
 <body>
     <header>Dashboard</header>
-    <nav></nav>
+    
+    <nav>
+        <div class="nav1">
+            <ul>
+                <a href="index.html"><li>Home</li></a>
+                <a href="index.html"><li>Profile</li></a>
+                <a href="index.html"><li>Messages</li></a>
+                <a href="index.html"><li>History</li></a>
+                <a href="index.html"><li>Tasks</li></a>
+                <a href="index.html"><li>Communities</li></a>
+            </ul>
+        </div>
+        <div class="nav2">
+            <ul>
+                <a href="index.html"><li>Settings</li></a>
+                <a href="index.html"><li>Support</li></a>
+                <a href="index.html"><li>Privacy</li></a>
+            </ul>
+         </div>
+    </nav>
 
     <div class="intro">
         <section class="search">
@@ -50,6 +69,7 @@
             <div class="cards"></div>
         </section>
 
+    </main>
         <aside class="announcement">
             <h3>Announcement</h3>
             <div class="announcement-items">
@@ -63,7 +83,7 @@
                 </div>
                 <div class="item3">
                     <h4>Updated Privacy Policy</h4>
-                    <p>We have just updated our Privacy Policy, but who the fuck cares? Nobody reads that thing. Anyway, we're taking all your data. Nothing you do is private. Privacy is a myth. Go fuck yourself.</p>
+                    <p>We have just updated our Privacy Policy, but who the fuck cares? Nobody reads that thing. Long story short, we're taking all your data. Privacy is a myth. Go fuck yourself.</p>
                 </div>
             </div>
         </aside>
@@ -101,8 +121,7 @@
                 </div>
             </div>
         </aside>
-    </main>
 
-    
+
 </body>
 </html>
