--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 <body>
     <header>Dashboard</header>
-    
     <nav>
         <div class="nav1">
+            <section class="search">
+                <form id="search" role="search">
+                    <div class="search-icon-wrapper">
+                        <label for="search-input"><svg viewBox="0 0 24 24" aria-hidden="true" class="search-icon"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg></label>
+                    </div>
+                    <input type="search" id="search-input" name="search" spellcheck="false" placeholder="Search">
+                </form>
+            </section>
+
             <ul>
                 <a href="index.html"><li>Home</li></a>
                 <a href="index.html"><li>Profile</li></a>
@@ -28,19 +36,10 @@
                 <a href="index.html"><li>Support</li></a>
                 <a href="index.html"><li>Privacy</li></a>
             </ul>
-         </div>
+        </div>
     </nav>
 
-    <div class="intro">
-        <section class="search">
-            <form id="search" role="search">
-                <div class="search-icon-wrapper">
-                    <label for="search-input"><svg viewBox="0 0 24 24" aria-hidden="true" class="search-icon"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg></label>
-                </div>
-                <input type="search" id="search-input" name="search" spellcheck="false" placeholder="Search">
-            </form>
-        </section>
-
+    <section class="header-section">
         <section class="greeting">
             <div class="current-profile">
                 <img src="./img/jesse-martin.png" alt="Jesse Martin" class="jesse-martin-avatar">
@@ -55,8 +54,8 @@
             <button type="button">New</button>
             <button type="button">Upload</button>
             <button type="button">Share</button>
-        </section>    
-    </div>
+        </section>
+    </section>
 
     <main>
         <section class="your-projects">
