Fix alignment of header and announcement sections

--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
     <main>
         <section class="your-projects">
             <h3>Your Projects</h3>
-            <div class="cards"></div>
-            <div class="cards"></div>
-            <div class="cards"></div>
-            <div class="cards"></div>
-            <div class="cards"></div>
-            <div class="cards"></div>
+            <div class="card-wrapper">
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+                <div class="cards"></div>
+            </div>
+
         </section>
 
     </main>
