Create contents for Projects section and make minor style adjustments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>Dashboard</header>
     <nav>
         <div class="nav1">
             <section class="search">
@@ -40,6 +39,7 @@
     </nav>
 
     <section class="header-section">
+        <header><h1><a href="index.html">Dashboard</a></h1></header>
         <section class="greeting">
             <div class="current-profile">
                 <img src="./img/jesse-martin.png" alt="Jesse Martin" class="jesse-martin-avatar">
@@ -59,39 +59,92 @@
 
     <main>
         <section class="your-projects">
-            <h3>Your Projects</h3>
+            <h2>Your Projects</h2>
             <div class="card-wrapper">
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>The Blair Witch Project</h4>
+                            <p>Are you having trouble finding other witches to date? If you are a witch, you can use this app to connect with other witches in your area. If you are a witch hunter pretending to be a witch, our algorithm will detect it and will blow up your device.</p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>Money Me, Money Now!</h3>
+                            <p>You want to get rich beyond your wildest dreams? You want to hire a hitman to kill your spouse and retire in the Caribbean? Have your fantasies come true by playing our unregulated lottery programs. Just download our app, buy a bunch of tickets, and win. <span class="maybe">Maybe.</span></p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>Pets.com</h3>
+                            <p>You want a cat? Have one delivered. Pets.com delivers pets overnight, wherever you are in the world. You want an elephant? No problem. Our warehouses have every animal in stock. Yeah, suck it, Noah. You can take your ark and shove it up your ass.</p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>One-click Erase</h3>
+                            <p>Do you need to disappear in a moment's notice? One-click Erase does exactly that. Go to our website at 1clickerase.com and click Erase. One of our representative will come over and help you vanish, no questions asked.</p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>Psych Kick</h3>
+                            <p>Ever wonder what will happen to you in the future? Wonder no more. Have our divination experts tap into the ether to help you find out what the future has in store for you. All we need is for you to believe and give us your credit card details.</p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="accent-color"></div>
+                    <div class="card-content">
+                        <div class="main-content">
+                            <h3>Life 2.0</h3>
+                            <p>Bored with your life? Tired of never achieving anything? Do you wish you could kick your boss in the nuts? Have a second life with Life 2.0. Recreate yourself and everyone you know in our highly-customizable virtual reality.</p>
+                        </div>
+                        <div class="interaction-section"></div>
+                    </div>
+                </div>
             </div>
-
         </section>
 
     </main>
         <aside class="announcement">
-            <h3>Announcement</h3>
+            <h2>Announcement</h2>
             <div class="announcement-items">
                 <div class="item1">
-                    <h4>Site Maintenance</h4>
-                    <p>We're doing site maintenance yada yada, blah blah blah, and you should go fuck yourself. Thank you very much.</p>
+                    <h3>Site Maintenance</h3>
+                    <p>We're doing site maintenance yada yada, blah blah blah, so go make yourself scarce. Thank you very much.</p>
                 </div>
                 <div class="item2">
-                    <h4>Community Share Day</h4>
+                    <h3>Community Share Day</h3>
                     <p>In this coming Community Share Day, why don't you take a break from being an evil mofo and share your wife with everybody?</p>
                 </div>
                 <div class="item3">
-                    <h4>Updated Privacy Policy</h4>
+                    <h3>Updated Privacy Policy</h3>
                     <p>We have just updated our Privacy Policy, but who the fuck cares? Nobody reads that thing. Long story short, we're taking all your data. Privacy is a myth. Go fuck yourself.</p>
                 </div>
             </div>
         </aside>
 
         <aside class="trending">
-            <h3>Trending</h3>
+            <h2>Trending</h2>
             <div class="trending-items">
                 <div class="item1">
                     <img src="./img/alexis-hunter.png" alt="Alexis Hunter">
