--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>I'm a Dashboard</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
     <nav>
@@ -68,7 +69,11 @@
                             <h3>The Blair Witch Project</h4>
                             <p>Are you having trouble finding other witches to date? If you are a witch, you can use this app to connect with other witches in your area. If you are a witch hunter pretending to be a witch, our algorithm will detect it and will blow up your device.</p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -78,7 +83,11 @@
                             <h3>Money Me, Money Now!</h3>
                             <p>You want to get rich beyond your wildest dreams? You want to hire a hitman to kill your spouse and retire in the Caribbean? Have your fantasies come true by playing our unregulated lottery programs. Just download our app, buy a bunch of tickets, and win. <span class="maybe">Maybe.</span></p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -88,7 +97,11 @@
                             <h3>Pets.com</h3>
                             <p>You want a cat? Have one delivered. Pets.com delivers pets overnight, wherever you are in the world. You want an elephant? No problem. Our warehouses have every animal in stock. Yeah, suck it, Noah. You can take your ark and shove it up your ass.</p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -98,7 +111,11 @@
                             <h3>One-click Erase</h3>
                             <p>Do you need to disappear in a moment's notice? One-click Erase does exactly that. Go to our website at 1clickerase.com and click Erase. One of our representative will come over and help you vanish, no questions asked.</p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -108,7 +125,11 @@
                             <h3>Psych Kick</h3>
                             <p>Ever wonder what will happen to you in the future? Wonder no more. Have our divination experts tap into the ether to help you find out what the future has in store for you. All we need is for you to believe and give us your credit card details.</p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -118,7 +139,11 @@
                             <h3>Life 2.0</h3>
                             <p>Bored with your life? Tired of never achieving anything? Do you wish you could kick your boss in the nuts? Have a second life with Life 2.0. Recreate yourself and everyone you know in our highly-customizable virtual reality.</p>
                         </div>
-                        <div class="interaction-section"></div>
+                        <div class="interaction-section">
+                            <img src="./svg/star.svg" alt="star-icon" class="star">
+                            <img src="./svg/visibility.svg" alt="visibility-icon" class="visibility">
+                            <img src="./svg/share.svg" alt="share-icon" class="share">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -176,7 +201,5 @@
                 </div>
             </div>
         </aside>
-
-
 </body>
 </html>
