--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <nav>
+    <nav class="nav-hidden">
         <div class="nav1">
             <section class="search">
                 <form id="search" role="search">
@@ -40,7 +40,10 @@
     </nav>
 
     <section class="header-section">
-        <header><h1><a href="index.html">Dashboard</a></h1></header>
+        <header>
+            <img src="./svg/hamburger.svg" alt="hamburger-menu" class="hamburger">
+            <h1><a href="index.html">Dashboard</a></h1>
+        </header>
         <section class="greeting">
             <div class="current-profile">
                 <img src="./img/jesse-martin.png" alt="Jesse Martin" class="jesse-martin-avatar">
