Add media query for medium to large screens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <nav class="nav-hidden">
+    <nav class="nav-hidden" id="nav-menu">
         <div class="nav1">
             <section class="search">
                 <form id="search" role="search">
